// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with one label 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 5,
        "marginTop": 10,
        "width": "100%",
      },
      false,
    ]
  }
  testID="sliderLabelsContainer"
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
    testID="startLabelContainer"
  >
    <Text
      style={
        Object {
          "color": "#0176D2",
          "fontSize": 14,
        }
      }
    >
      <Translation
        passThrough="label"
      />
    </Text>
  </View>
</View>
`;

exports[`renders with two labels 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 5,
        "marginTop": 10,
        "width": "100%",
      },
      false,
    ]
  }
  testID="sliderLabelsContainer"
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
    testID="startLabelContainer"
  >
    <Text
      style={
        Object {
          "color": "#0176D2",
          "fontSize": 14,
        }
      }
    >
      <Translation
        passThrough="start label"
      />
    </Text>
  </View>
  <View
    onLayout={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "translateX": -0,
          },
        ],
      }
    }
    testID="endLabelContainer"
  >
    <Text
      style={
        Object {
          "color": "#0176D2",
          "fontSize": 14,
        }
      }
    >
      <Translation
        passThrough="end label"
      />
    </Text>
  </View>
</View>
`;
